...
      }}
    >
      <Tabs.Screen
        name="index"
        options={{
          title: t('tabs.home'),
          tabBarButtonTestID: "tab-home",
          tabBarIcon: ({ color, size }) => (
            <HomeIcon color={color} size={size} />
          ),
        }}
      />
      <Tabs.Screen
        name="agenda"
        options={{
          title: t('tabs.agenda'),
          tabBarButtonTestID: "tab-agendas",
          tabBarIcon: ({ color, size }) => (
            <ClipboardListIcon color={color} size={size} />
          ),
        }}
      />
      <Tabs.Screen
...
